# src/App/backend/test/Altinn.App.Api.Tests/OpenApi/OpenApiSpecChangeDetection.SaveCustomOpenApiSpec.verified.json
@@ -2317,6 +2317,13 @@
         },
         "additionalProperties": false
       },
+      "ProcessStatus": {
+        "enum": [
+          "idle",
+          "processing"
+        ],
+        "type": "string"
+      },
       "ValidationStatus": {
         "type": "object",
         "properties": {
@@ -2375,8 +2382,7 @@
         "type": "object",
         "properties": {
           "status": {
-            "type": "string",
-            "nullable": true
+            "$ref": "#/components/schemas/ProcessStatus"
           },
           "started": {
             "type": "string",
@@ -2974,8 +2980,7 @@
         "type": "object",
         "properties": {
           "status": {
-            "type": "string",
-            "nullable": true
+            "$ref": "#/components/schemas/ProcessStatus"
           },
           "started": {
             "type": "string",
